Add viewing more details to ShowUserActivity

--- a/Tuter/res/layout/activity_show_user.xml
+++ b/Tuter/res/layout/activity_show_user.xml
@@ -26,6 +26,11 @@
 	        android:layout_height="wrap_content"
 	        android:text="@string/loading"
         android:id="@+id/email" />
+   	    <TextView
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:text="@string/loading"
+        	android:id="@+id/tutor_details" />
     
     </LinearLayout>
 </RelativeLayout>
