--- a/Tuter/res/layout/activity_show_user.xml
+++ b/Tuter/res/layout/activity_show_user.xml
@@ -32,5 +32,12 @@
 	        android:text="@string/loading"
         	android:id="@+id/tutor_details" />
     
+	    <ListView
+	        android:id="@+id/groups_list"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content" >
+	    </ListView>
+	    
     </LinearLayout>
+    
 </RelativeLayout>
