--- a/Tuter/res/layout/activity_show_user.xml
+++ b/Tuter/res/layout/activity_show_user.xml
@@ -2,10 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:padding="12dp"
     tools:context=".ShowUserActivity" >
     
     <LinearLayout
@@ -30,7 +27,15 @@
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:text="@string/loading"
-        	android:id="@+id/tutor_details" />
+        	android:id="@+id/tutor_details"
+     	    android:layout_marginBottom="20dp" />
+   	    
+   	    <TextView
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:text="@string/show_user_groups"
+        	android:id="@+id/groups_header"
+        	style="@style/h2_text" />
     
 	    <ListView
 	        android:id="@+id/groups_list"
