--- a/Tuter/res/layout/list_single_result.xml
+++ b/Tuter/res/layout/list_single_result.xml
@@ -15,6 +15,8 @@
         android:id="@+id/text2"
     	android:layout_height="wrap_content"
         android:layout_width="fill_parent"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:text="@string/lorem_ipsum"></TextView>
 
 </LinearLayout>
