--- a/Tuter/res/layout/list_single_result.xml
+++ b/Tuter/res/layout/list_single_result.xml
@@ -17,6 +17,7 @@
         android:layout_width="fill_parent"
         android:maxLines="2"
         android:ellipsize="end"
-        android:text="@string/lorem_ipsum"></TextView>
+        android:text="@string/lorem_ipsum"
+        style="@style/grey_text"></TextView>
 
 </LinearLayout>
