--- a/Tuter/res/values/styles.xml
+++ b/Tuter/res/values/styles.xml
@@ -42,6 +42,10 @@
         <item name="android:textStyle">bold</item>
     </style>
     
+    <style name="grey_text">
+        <item name="android:textColor">@color/grey</item>
+    </style>
+    
     <style name="checkbox">
         <item name="android:layout_marginRight">8dp</item>
         <item name="android:layout_marginLeft">8dp</item>
