--- a/Tuter/res/values/styles.xml
+++ b/Tuter/res/values/styles.xml
@@ -37,6 +37,11 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
     </style>
+    <style name="subheader">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@drawable/border_bottom</item>
+    </style>
     <style name="label_text">
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
