--- a/Tuter/res/layout/activity_search_results.xml
+++ b/Tuter/res/layout/activity_search_results.xml
@@ -3,8 +3,16 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-	<ListView 
+	<ListView
 	    android:id="@+id/results_list"
 	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent"/> 
+	    android:layout_height="0dip"
+	    android:layout_weight="1" />
+	    
+	<Button
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:text="@string/refresh_button"
+	    android:id="@+id/button_refresh"/>
+	    
 </LinearLayout>
