--- a/Tuter/res/layout/activity_welcome.xml
+++ b/Tuter/res/layout/activity_welcome.xml
@@ -50,6 +50,14 @@
             android:layout_width="fill_parent"
             android:id="@+id/welcome_searchButton"
        	    android:text="@string/welcome_search"></Button>
+
+       	<Button
+       	    android:id="@+id/welcome_Organizations"
+       	    android:layout_width="fill_parent"
+       	    android:layout_height="wrap_content"
+       	    android:layout_weight="1"
+       	    android:text="@string/welcome_Organizations"></Button>
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
@@ -66,6 +74,7 @@
             android:id="@+id/welcome_signUpButton"
        	    android:text="@string/welcome_signUp"></Button>
        	</LinearLayout>
+
     </LinearLayout>
         
 
