--- a/Tuter/res/layout/fragment_search_results_list.xml
+++ b/Tuter/res/layout/fragment_search_results_list.xml
@@ -9,5 +9,9 @@
 	    android:layout_width="fill_parent"
 	    android:layout_height="0dip"
 	    android:layout_weight="1" />
-
+	<Button
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:text="@string/refresh_button"
+	    android:id="@+id/button_refresh"/>
 </LinearLayout>
