--- a/Tuter/res/layout/activity_view_organizations.xml
+++ b/Tuter/res/layout/activity_view_organizations.xml
@@ -8,6 +8,8 @@
 	    android:id="@+id/organization_name"
 	    android:layout_width="fill_parent"
 	    android:layout_height="fill_parent"
-	    android:background="@drawable/welcome_background"/>
+	    android:background="@drawable/welcome_background"
+	    android:dividerHeight="10.0sp"
+	    android:padding="5dp"/>
  
 </LinearLayout>
