Display User address in ShowUserActivity

--- a/Tuter/res/layout/activity_show_user.xml
+++ b/Tuter/res/layout/activity_show_user.xml
@@ -22,6 +22,11 @@
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:text="@string/loading"
+        android:id="@+id/address" />
+	    <TextView
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:text="@string/loading"
         android:id="@+id/email" />
    	    <TextView
 	        android:layout_width="fill_parent"
