Add default profile pic

--- a/Tuter/res/layout/activity_show_user.xml
+++ b/Tuter/res/layout/activity_show_user.xml
@@ -5,20 +5,51 @@
     android:padding="12dp"
     tools:context=".ShowUserActivity" >
     
+        
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/text_info">
+		<ImageView
+			android:layout_width="100dp"
+			android:minWidth="100dp"
+			android:layout_marginRight="12dp"
+			android:layout_marginBottom="12dp"
+			android:layout_height="100dp"
+			android:adjustViewBounds="true"
+			android:src="@drawable/banerjee"
+			android:id="@+id/image"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_toRightOf="@id/image">
+		    <TextView
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:text="@string/loading"
+		        android:id="@+id/full_name"
+		        style="@style/h1_text" />
+		    
+		    <TextView
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:text="@string/loading"
+	        	android:id="@+id/description"
+	        	android:textStyle="italic"
+	        	android:textColor="@color/light_grey"
+	        	android:textSize="13sp" />
+  		</LinearLayout>
+    </RelativeLayout>
+    
     <LinearLayout
+        android:layout_marginTop="12dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_alignParentTop="true">
-        
-	    <TextView
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:text="@string/loading"
-	        android:id="@+id/full_name"
-	        style="@style/h1_text" />
-	    
-	    <TextView
+        android:layout_below="@id/text_info">
+   	    <TextView
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:text="@string/loading"
@@ -33,8 +64,8 @@
 	        android:layout_height="wrap_content"
 	        android:text="@string/loading"
         	android:id="@+id/tutor_details"
-     	    android:layout_marginBottom="20dp" />
-   	    
+     	    android:layout_marginBottom="20dp" /> 
+     	    
    	    <TextView
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
@@ -47,7 +78,6 @@
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content" >
 	    </ListView>
-	    
     </LinearLayout>
     
 </RelativeLayout>
