--- a/Tuter/res/layout/fragment_search_results_list.xml
+++ b/Tuter/res/layout/fragment_search_results_list.xml
@@ -3,7 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    	    
+   	<TextView
+		android:layout_width="fill_parent"
+    	android:layout_height="wrap_content"
+    	android:text="@string/search_params"
+    	android:id="@+id/search_params"/>
 	<ListView
 	    android:id="@+id/results_list"
 	    android:layout_width="fill_parent"
