Implement view all tutors in SearchActivity

--- a/Tuter/res/layout/activity_search.xml
+++ b/Tuter/res/layout/activity_search.xml
@@ -3,13 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SearchActivity" >
-
-	    
 		<fragment 
 	         android:id="@+id/map"
 	         android:layout_width="match_parent"
 	         android:layout_height="wrap_content"
-	         android:name="com.google.android.gms.maps.SupportMapFragment"/>
+	         android:name="me.tuter.fragments.SearchResultsMapFragment"
+	         android:tag="@id/map"/>
 
 		<LinearLayout
 		    android:layout_height="wrap_content"
@@ -33,26 +32,6 @@
 		        android:hint="@string/search_locationHint"
 		        android:inputType="text" />
 		    
-    		<LinearLayout
-			    android:layout_height="wrap_content"
-			    android:layout_width="fill_parent">
-    		    
-		    <CheckBox
-		        android:id="@+id/volunteer_field"
-		        android:layout_height="wrap_content"
-		        android:layout_width="wrap_content"
-		        android:text="@string/search_volunteerLabel"
-		    	android:textColor="@color/white"
-		        android:layout_weight="1"/>
-		    <CheckBox
-		        android:id="@+id/paid_field"
-		        android:layout_height="wrap_content"
-		        android:layout_width="wrap_content"
-		    	android:textColor="@color/white"
-		        android:text="@string/search_paidLabel"
-		        android:layout_weight="1"/>
-		    
-    		</LinearLayout>
 		    <Button
 		        android:layout_height="wrap_content"
 	            android:layout_width="fill_parent"
